<resources>

    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- MAIN ACTIVITY -->
    <string name="title_Bar">I\'m Hungry!</string>
    <string name="title_map">Map View</string>
    <string name="title_list">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="search">Search</string>
    <string name="distance">%sm</string>
    <string name="yesEating">%1$s is eating at %2$s</string>
    <string name="noEating">%s hasn\'t decided yet</string>
    <string name="no_restaurant">No restaurant selected</string>
    <string name="closing_soon">Closing soon</string>
    <string name="closed">Closed</string>
    <string name="open_until">Open until %dh%d</string>
    <string name="select_restaurant">Please select a restaurant</string>
    <string name="counter" translatable="false">(%1$d)</string>
    <string name="openUntil">Open until %1$dh%2$d</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">NoUsernameDefined</string>
    <string name="nav_header_subtitle" translatable="false">NoEmailDefined</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_lunch">YOUR LUNCH</string>
    <string name="nav_settings">SETTINGS</string>
    <string name="nav_logout">LOG OUT</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login">LOG IN</string>

    <!-- SnackBar -->
    <string name="error_authentication_canceled">Authentication cancelled</string>
    <string name="error_no_internet">Error: No internet connection</string>
    <string name="error_unknown_error">Unknown error</string>

    <!-- DETAIL ACTIVITY -->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="liked">LIKED</string>
    <string name="unliked">UNLIKED</string>
    <string name="website">WEBSITE</string>
    <string name="joining">%s is joining!</string>
    <string name="no_phone_number">No phone number</string>
    <string name="no_website">No website</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settings">Settings</string>
    <string name="edit">EDIT</string>
    <string name="username">Username :</string>
    <string name="notifications">Notifications %s</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <!-- FACEBOOK -->
    <string name="facebook_application_id" translatable="false">283394502353733</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb283394502353733</string>

    <!-- TWITTER -->
    <string name="twitter_consumer_key" translatable="false">fMjGWNhjR40QaHNGyyfCpTBin</string>
    <string name="twitter_consumer_secret" translatable="false">jKQOTLwjRDLLI2ZzMswDQKwQsPNdy9fcmFQUuCzsRks0RxXMt8</string>

</resources>


