<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:padding="15dp"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/nav_header_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_header_user_image"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/colorHamburger" />

    <ImageView
        android:id="@+id/nav_header_user_image"
        android:layout_width="60dip"
        android:layout_height="60dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/nav_header_desc" />

    <TextView
        android:id="@+id/nav_header_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nav_header_user_image"
        app:layout_constraintTop_toTopOf="@id/nav_header_user_image"
        app:layout_constraintBottom_toBottomOf="@id/nav_header_user_mail"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/nav_header_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorHamburger" />

    <TextView
        android:id="@+id/nav_header_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nav_header_user_image"
        app:layout_constraintTop_toTopOf="@id/nav_header_user_name"
        app:layout_constraintBottom_toBottomOf="@+id/nav_header_user_image"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="14sp"
        android:textColor="@color/colorHamburger" />

</androidx.constraintlayout.widget.ConstraintLayout>
