<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.SettingsActivity">

    <!-- Toolbar -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_constraintLayout_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/settings_constraintLayout_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp">

        <TextView
            android:id="@+id/settings_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/settings_name_button"
            app:layout_constraintBottom_toBottomOf="@+id/settings_name_button"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/settings_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/settings_name_button"
            app:layout_constraintBottom_toBottomOf="@id/settings_name_button"
            app:layout_constraintStart_toEndOf="@id/settings_name_text"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/settings_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/edit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/settings_constraintLayout_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorVeryLightGray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_constraintLayout_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/settings_constraintLayout_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp">

        <TextView
            android:id="@+id/settings_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/settings_switch_button"
            app:layout_constraintBottom_toBottomOf="@id/settings_switch_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_switch_button"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/notifications"/>

        <Switch
            android:id="@+id/settings_switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_switch_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:shadowColor="@color/colorPrimary"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>