<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    app:layout_constraintVertical_weight="10">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="3.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/detail_info"
        android:background="@color/colorAccent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:background="@color/colorPrimary"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_image"
        app:layout_constraintBottom_toTopOf="@id/detail_buttons">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_info"
            android:text="Restaurant"
            android:textColor="@color/colorHamburger"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_name"
            android:text="Address"
            android:textColor="@color/colorHamburger"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/detail_name"
            app:layout_constraintBottom_toBottomOf="@id/detail_name"
            android:numStars="3"
            style="?android:attr/ratingBarStyleSmall"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_info"
        app:layout_constraintBottom_toTopOf="@id/detail_recycler">

        <ImageView
            android:id="@+id/detail_call_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_black_30dp"
            app:layout_constraintTop_toTopOf="@+id/detail_buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detail_like_image" />

        <ImageView
            android:id="@+id/detail_like_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_black_30dp"
            app:layout_constraintTop_toTopOf="@+id/detail_buttons"
            app:layout_constraintStart_toEndOf="@id/detail_call_image"
            app:layout_constraintEnd_toStartOf="@id/detail_website_image"/>

        <ImageView
            android:id="@+id/detail_website_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_public_black_30dp"
            app:layout_constraintTop_toTopOf="@+id/detail_buttons"
            app:layout_constraintStart_toEndOf="@id/detail_like_image"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_call_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detail_buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detail_like_image"
            android:text="@string/call"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/detail_like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detail_buttons"
            app:layout_constraintStart_toEndOf="@id/detail_call_image"
            app:layout_constraintEnd_toStartOf="@id/detail_website_image"
            android:text="@string/like"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/detail_website_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detail_buttons"
            app:layout_constraintStart_toEndOf="@id/detail_like_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/website"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="17sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="3.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_buttons"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>